--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.9.0"
   }
 }
